--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -162,15 +162,14 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =["cr02d_district"]
+                            DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select District"
-                            IsSearchable: =false
                             Items: =Distinct(SHTechnicians,District)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =["cr02d_district"]
-                            SearchItems: =[]
+                            SearchFields: =["Value"]
+                            SearchItems: =Search(Distinct(SHTechnicians,District),cmbxdistrictfilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =40
