--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -802,7 +802,7 @@ DashboardScreen As screen:
                         lblInprogressIncentivesDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Quoted"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
@@ -837,7 +837,7 @@ DashboardScreen As screen:
 
                         lblQuotedLeadsDS As label:
                             Align: =Align.Center
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Quoted"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
@@ -866,7 +866,7 @@ DashboardScreen As screen:
                         lblQuotedDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Quoted"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
@@ -977,7 +977,7 @@ DashboardScreen As screen:
                         lbllIncentivesLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
@@ -1017,7 +1017,7 @@ DashboardScreen As screen:
 
                         lblSoldLeadsCountDS As label:
                             Align: =Align.Center
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
@@ -1047,7 +1047,7 @@ DashboardScreen As screen:
                         lblSoldLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
