--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -657,7 +657,7 @@ DashboardScreen As screen:
                             Area: i.Area,
                             Territory: i.Territory,
                             District: i.District,
-                            QQTeamEmail:"wallabh.sardesai@schindler.com.",
+                            QQTeamEmail:"wallabh.sardesai@schindler.com",
                             QQTeamName:"Wallabh Sardesai"
                         }
                     );))
