--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -663,6 +663,7 @@ DashboardScreen As screen:
                         }
                     );))
             Text: ="Patch old leads"
+            Visible: =false
             ZIndex: =6
 
         ctnschindlerimg As groupContainer.verticalAutoLayoutContainer:
