--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -3,6 +3,7 @@ DashboardScreen As screen:
         =Refresh(LeadInformations);
         Set(VarAllLeads,false);
         Set(VarPopUpIncentivesCalculation,false);
+        Set(VarPopUpSyncData,false);
 
     ctnmainDS As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
@@ -615,7 +616,7 @@ DashboardScreen As screen:
             Fill: =Header.SHRed
             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
             OnSelect: |-
-                =Set(VarFlowResult,true);
+                =Set(VarFlowResult,Quoted_Sold_Flow.Run());
                 If(VarFlowResult,Set(VarPopUpIncentivesCalculation,true));
             Text: ="Calculate Incentives"
             Width: =300
@@ -744,6 +745,57 @@ DashboardScreen As screen:
             Width: =ctnHeaderDashboardScreen.Width/10
             ZIndex: =4
 
+        Image3 As image:
+            BorderColor: =RGBA(0, 0, 0, 1)
+            BorderThickness: =1
+            DisabledFill: =RGBA(255, 255, 255, 1)
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =Parent.Height/2
+            HoverFill: =Self.Fill
+            Image: =sync
+            OnSelect: =
+            PaddingBottom: =5
+            PaddingLeft: =5
+            PaddingRight: =5
+            PaddingTop: =5
+            PressedFill: =Self.Fill
+            RadiusBottomLeft: =100
+            RadiusBottomRight: =100
+            RadiusTopLeft: =100
+            RadiusTopRight: =100
+            Width: |-
+                =//Parent.Width/15
+                Parent.Height/2
+            X: =lblusernameDS.Width+lblusernameDS.X+20
+            Y: =20
+            ZIndex: =5
+
+        Button4 As button:
+            Fill: =RGBA(0, 0, 0, 0)
+            HoverFill: =
+            OnSelect: |-
+                =Set(VarPopUpSyncData,true);
+                Concurrent(
+                Refresh(LeadInformations),
+                Refresh(LeadChats),
+                Refresh(LeadImages),
+                Refresh(' PrimaryScopeofWorks'),
+                Refresh(SecondaryScopeofWorks),
+                Refresh(SHFPEstimates),
+                Refresh(SHTechnicians),
+                Refresh(TotalIncentives)
+                );
+                Set(VarPopUpSyncData,false);
+            RadiusBottomLeft: =90
+            RadiusBottomRight: =90
+            RadiusTopLeft: =90
+            RadiusTopRight: =90
+            Text: =""
+            Width: =40
+            X: =lblusernameDS.Width+lblusernameDS.X+20
+            Y: =20
+            ZIndex: =6
+
     grpinprogressconfirmationLS_1 As group:
         Height: =5
         Width: =5
@@ -803,4 +855,49 @@ DashboardScreen As screen:
             X: =623
             Y: =480
             ZIndex: =8
+
+    grpinprogressconfirmationLS_2 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =14
+
+        rectfullinprogressconfirmtionLS_4 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =Parent.Height
+            Visible: =VarPopUpSyncData
+            Width: =Parent.Width
+            ZIndex: =9
+
+        rectinprogressconfirmationLS_4 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =280
+            Visible: =VarPopUpSyncData
+            Width: =400
+            X: =(Parent.Width-Self.Width)/2
+            Y: =Parent.Height/3
+            ZIndex: =10
+
+        imginfoLS_4 As image:
+            Height: =52
+            Image: =images
+            Visible: =VarPopUpSyncData
+            Width: =52
+            X: =(Parent.Width-Self.Width)/2
+            Y: =rectinprogressconfirmationLS_4.Y+20
+            ZIndex: =11
+
+        lblmsgLS_4 As label:
+            Align: =Align.Center
+            Font: =Font.Arial
+            FontWeight: =FontWeight.Semibold
+            Height: =100
+            Size: =15
+            Text: ="Refreshing data, please wait."
+            Visible: =VarPopUpSyncData
+            Width: =350
+            X: =(Parent.Width-Self.Width)/2
+            Y: =imginfoLS_4.Y+ imginfoLS_4.Height+2
+            ZIndex: =12
 
