--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -1,9 +1,9 @@
 App As appinfo:
     BackEnabled: =false
     OnStart: |
-        =// Set technician Id into variable VarTechnicianID.)
+        =// Set technician Id into variable VarTechnicianID.
         Set(VarTechnicianID,LookUp(SHTechnicians,'Email Address'=User().Email));
-        // Set user Email into variable myMail.)
+        // Set user Email into variable myMail.
         Set(
             myMail,
             User().Email
@@ -126,14 +126,17 @@ App As appinfo:
             varshowMenu,
             false
         );
+        // store dataverse table named as TotalIncentives store into collection GCTotalIncentives.  
         ClearCollect(
             GCTotalIncentives,
             TotalIncentives
         );
+        // Store dataverse table named as ' PrimaryScopeofWorks' store into GCPrimaryScopeofWorks.
         ClearCollect(
             GCPrimaryScopeofWorks,
             ' PrimaryScopeofWorks'
         );
+        // store dataverse table named as SecondaryScopeofWorks store into GCSecondaryScopeofWorks .
         ClearCollect(
             GCSecondaryScopeofWorks,
             SecondaryScopeofWorks
